codex-rs/tui/src/user_terminal/snapshots/codex_tui__user_terminal__tests__terminal_ansi_render.snap
---
source: tui/src/user_terminal/tests.rs
expression: buffer_to_string(&buf)
---
/sh default  half  shared full-access  r
redlo
     world

 ctrl + x controls   shell input
