codex-rs/tui/src/user_terminal/snapshots/codex_tui__user_terminal__tests__terminal_layout_frame_controls.snap
---
source: tui/src/user_terminal/tests.rs
expression: "render_to_string(&mut terminal, 60, 16)"
---
/sh default  7 rows  shared full-access  running  /repo
prompt$ echo hi
               hi



 frame controls: x/q dismiss  f fullscreen  h half  +/- resi
