codex-rs/tui/src/user_terminal/snapshots/codex_tui__user_terminal__tests__terminal_layout_fullscreen.snap
---
source: tui/src/user_terminal/tests.rs
expression: "render_to_string(&mut terminal, 60, 16)"
---
/sh default  fullscreen  shared full-access  running  /repo
prompt$ echo hi
               hi












 ctrl + x controls   shell input
